Add point-in-polygon utility method